[package]
name = "basic_deno_ts_module_loader"
version = "0.1.1"
edition = "2021"
authors = ["Peter Jiang"]
description = "A basic Deno TypeScript module loader"
license = "MIT"
repository = "https://github.com/CheatCod/basic_deno_ts_module_loader"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "=0.11.20"
anyhow = "1.0.79"
deno_ast = { version = "=0.32.1", features = ["transpiling"] }
deno_core = "=0.256.0"
deno_runtime = "0.144.0"
tokio = { version = "1.36.0", features = ["fs"] }
